iphone viewport spilling fix

--- a/docs/app/root.css
+++ b/docs/app/root.css
@@ -24,8 +24,8 @@ body {
     color: var( --color );
     margin: 0 auto;
     max-width: 2048px;
-    min-width: 532px;
     overflow-x: hidden;
+    width: 100%;
 }
 body * {
     background-color: inherit;
